--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Customview</string>
+    <string name="app_name">Progress Button</string>
+    <string name="login">Login</string>
+    <string name="login_load_state">Please wait…</string>
 </resources>
